--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ color: #404bbf;
 
 
 
-.solution-logo {
+h1 {
   color: #ffffff;
   text-align: center;
   font-size: 56px;
@@ -170,7 +170,7 @@ color: #404bbf;
 
 
 .team {
-    background-color: #F4F4FD;
+background: var(--CLOUD, #F4F4FD);
 }
 
 .team-title {
@@ -184,6 +184,7 @@ color: #404bbf;
 }
 
 .team-list {
+    background-color: #FFFFFF;
 }
 
 .team-item {
@@ -269,7 +270,16 @@ color: #404bbf;
 
 
 .footer-logo {
-  color: #4d5ae5;
+color: #4D5AE;
+font-family: Raleway;
+font-size: 18px;
+font-weight: 700;
+line-height: 1.16;
+letter-spacing: 0.03em;
+}
+
+.footer-logo-span {
+  color: #F4F4FD;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-style: normal;
@@ -277,10 +287,6 @@ color: #404bbf;
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-}
-
-.footer-logo span {
-  color: #F4F4FD;
 }
 
 .footer-text {
