--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ a {
 
 
 
-.header-contact-link {
+.header-contact-lin .link {
   color: #434455;
 }
 
@@ -94,23 +94,31 @@ a {
 
 
 
+
+
+
+
+
+
+
+
+
 .solution {
-background-color: var(--NAVY-BLUE, #2E2F42);
+background-color: #2E2F42;
 }
 
 
 
 .solution-title {
-  color: #ffffff;
-  text-align: center;
-  font-size: 56px;
-  font-weight: 700;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
+color: #FFF;
+text-align: center;
+font-size: 56px;
+font-weight: 700;
+line-height: 1.07;
+letter-spacing: 0.02em;
 }
 
 .solution-btn {
-  border-radius: 4px;
   background: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba;
   color: #fff;
@@ -311,7 +319,7 @@ background-color: var(--NAVY-BLUE, #2E2F42);
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
@@ -327,3 +335,10 @@ background-color: var(--NAVY-BLUE, #2E2F42);
 .footer {
   background: #2e2f42;
 }
+
+
+
+
+
+
+ , border-radius
