--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ a {
 
 .header-logo {
     color:#4D5AE5;
-font-family: "Raleway", sans-serif;
+font-family: "Raleway" sans-serif;
 font-size: 18px;
 font-weight: 700;
 line-height: 1.17;
@@ -41,6 +41,11 @@ text-transform: uppercase;
 
 
 .header-menu-item {
+color:#2E2F42;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
 }
 
 
@@ -50,6 +55,11 @@ font-size: 16px;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
+}
+
+
+.header-menu-lin .link {
+    color:#2E2F42;
 }
 
 
@@ -88,6 +98,11 @@ font-style: normal;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em;
+}
+
+
+.header-contact-lin .link {
+    color: #434455;
 }
 
 
