--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ a {
 
 .header-logo {
     color:#4D5AE5;
-font-family: "Raleway" sans-serif;
+font-family: "Raleway", sans-serif;
 font-size: 18px;
 font-weight: 700;
 line-height: 1.17;
@@ -49,7 +49,7 @@ letter-spacing: 0.02em;
 }
 
 
-.header-menu-lin {
+.header-menu-lin .link {
     color:#2E2F42;
 font-size: 16px;
 font-weight: 500;
@@ -61,7 +61,7 @@ letter-spacing: 0.02em;
 
 
 
-.header-menu-lin:hover, .header-menu-lin:focus {
+.header-menu-lin .link:hover, .header-menu-lin .link:focus {
     color: #404bbf;
 }
 
