--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ letter-spacing: 0.02em;
 }
 
 
-.header-menu-lin .link {
+.header-menu-lin {
     color:#2E2F42;
 font-size: 16px;
 font-weight: 500;
@@ -61,7 +61,8 @@ letter-spacing: 0.02em;
 
 
 
-.header-menu-lin .link:hover, .header-menu-lin .link:focus {
+.header-menu-lin:hover,
+.header-menu-lin:focus {
     color: #404bbf;
 }
 
